Display name for applications
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -85,6 +85,9 @@ spec:
                 description:
                   description: Description of the application. what is its purpose
                   type: string
+                displayName:
+                  description: DisplayName is the name for the application that will be displayed in the UI.
+                  type: string
                 documentationURL:
                   description: |-
                     DocumentationURL holds a link to official documentation of the Application
