--- a/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
@@ -24,6 +24,7 @@ metadata:
   name: cert-manager
 spec:
   description: cert-manager is a Kubernetes addon to automate the management and issuance of TLS certificates from various issuing sources.
+  displayName: cert-manager
   method: helm
   versions:
   - template:
