--- a/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
@@ -24,6 +24,7 @@ metadata:
   name: nvidia-gpu-operator
 spec:
   description: Nvidia GPU management for Kubernetes
+  displayName: NVIDIA GPU Operator
   method: helm
   versions:
     - template:
