--- a/pkg/ee/default-application-catalog/applicationdefinitions/falco-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/falco-app.yaml
@@ -24,6 +24,7 @@ metadata:
   name: falco
 spec:
   description: Falco is a cloud native runtime security tool for Linux operating systems.
+  displayName: Falco
   method: helm
   versions:
   - template:
