--- a/pkg/ee/default-application-catalog/applicationdefinitions/kubevirt.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/kubevirt.yaml
@@ -24,6 +24,7 @@ metadata:
   name: kubevirt
 spec:
   description: KubeVirt with Containerized Data Importer
+  displayName: KubeVirt
   method: helm
   versions:
     - template:
