--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -34,6 +34,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.28" }}
 {{ $version = "v4.7.1" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.29" }}
+{{ $version = "v4.8.0" }}
+{{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
 ---
