--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -139,6 +139,9 @@ spec:
                 enableDashboard:
                   description: EnableDashboard enables the link to the Kubernetes dashboard for a user cluster.
                   type: boolean
+                enableEtcdBackup:
+                  description: EnableEtcdBackup enables the etcd Backup feature in the dashboard.
+                  type: boolean
                 enableExternalClusterImport:
                   type: boolean
                 enableOIDCKubeconfig:
