Don't propagate cloud-config secret to user cluster (#13366)
* Don't propagate cloud-config secret to user cluster

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Fix check for cleanup

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/csi/azure-disk/csi-azuredisk-controller.yaml
+++ b/addons/csi/azure-disk/csi-azuredisk-controller.yaml
@@ -18,7 +18,7 @@
 # - image source includes registry templating
 # - removal of tolerations
 # - set spec.replicas=1 since leader elections are configured
-# - mount cloud-config instead of using host path
+# - mount cloud-config-csi instead of using host path
 # - add a securityContext
 
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
@@ -202,6 +202,6 @@ spec:
           emptyDir: {}
         - name: cloud-config
           secret:
-            secretName: cloud-config
+            secretName: cloud-config-csi
 {{ end }}
 {{ end }}
