--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -2533,7 +2533,7 @@ spec:
                   type: boolean
                 enableOperatingSystemManager:
                   description: |-
-                    Deprecated: This field has been deprecated and is now no-op. OSM is always enabled for user clusters.
+                    Deprecated: EnableOperatingSystemManager has been deprecated starting with KKP 2.26 and will be removed in KKP 2.28+. This field is no-op and OSM is always enabled for user clusters.
                     OSM is responsible for creating and managing worker node configuration.
                   type: boolean
                 enableUserSSHKeyAgent:
