--- a/charts/monitoring/kube-state-metrics/templates/deployment.yaml
+++ b/charts/monitoring/kube-state-metrics/templates/deployment.yaml
@@ -27,12 +27,13 @@ spec:
         app: kube-state-metrics
         app.kubernetes.io/component: exporter
         app.kubernetes.io/name: kube-state-metrics
-        app.kubernetes.io/version: 2.8.2
+        app.kubernetes.io/version: '{{ .Values.kubeStateMetrics.image.tag }}'
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '8080'
         kubermatic.io/chart: kube-state-metrics
         fluentbit.io/parser: glog
+        cluster-autoscaler.kubernetes.io/safe-to-evict-local-volumes: tmp
     spec:
       serviceAccountName: kube-state-metrics
       automountServiceAccountToken: true
@@ -42,14 +43,15 @@ spec:
       containers:
       - name: kube-state-metrics
         image: '{{ .Values.kubeStateMetrics.image.repository }}:{{ .Values.kubeStateMetrics.image.tag }}'
-        # Ref: https://kubernetes.io/blog/2021/04/13/kube-state-metrics-v-2-0/#what-is-new-in-v2-0
-        # Issue and solutions: https://github.com/kubernetes/kube-state-metrics/issues/1501#issuecomment-863020915
-        # and https://github.com/kubernetes/kube-state-metrics/issues/1489#issuecomment-851970288
         args:
-        - --metric-labels-allowlist=pods=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance,component,part-of,app,unit],deployments=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance]
+        - --metric-labels-allowlist=pods=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance,component,part-of,app,unit],deployments=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance],persistentvolumeclaims=[excluded-from-alerts]
         {{- if .Values.kubeStateMetrics.customResourceState.enabled }}
         - --custom-resource-state-config-file=/etc/customresourcestate/config.yaml
+        {{- end }}
         volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+        {{- if .Values.kubeStateMetrics.customResourceState.enabled }}
         - name: customresourcestate-config
           mountPath: /etc/customresourcestate
           readOnly: true
@@ -62,7 +64,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /
-            port: 8081
+            port: 8080
           initialDelaySeconds: 5
           timeoutSeconds: 5
         livenessProbe:
@@ -78,6 +80,10 @@ spec:
             - ALL
           readOnlyRootFilesystem: true
           runAsUser: 65534
+          runAsGroup: 65534
+          runAsNonRoot: true
+          seccompProfile:
+            type: RuntimeDefault
         resources:
 {{ toYaml .Values.kubeStateMetrics.resources | indent 10 }}
 
@@ -112,8 +118,10 @@ spec:
           periodSeconds: 10
         resources:
 {{ toYaml .Values.kubeStateMetrics.resizer.resources | indent 10 }}
-{{- if .Values.kubeStateMetrics.customResourceState.enabled }}
       volumes:
+        - name: tmp
+          emptyDir: {}
+{{- if .Values.kubeStateMetrics.customResourceState.enabled }}
         - name: customresourcestate-config
           configMap:
             name: kube-state-metrics-customresourcestate-config
