Make registration of metrics collectors optional in the seed controller manager (#13395)
* hack: consider using nerdctl when docker is not installed

Signed-off-by: Navid <yaa110@gmail.com>

* Make registration of metrics collectors optional in the seed controller manager

closed #12331

Signed-off-by: Navid <yaa110@gmail.com>

---------

Signed-off-by: Navid <yaa110@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -2137,6 +2137,20 @@ spec:
                     - prometheus
                     - scheduler
                   type: object
+                disabledCollectors:
+                  description: |-
+                    DisabledCollectors contains a list of metrics collectors that should be disabled.
+                    Acceptable values are "Addon", "Cluster", "ClusterBackup", "Project", and "None".
+                  items:
+                    description: MetricsCollector is the name of an available metrics collector.
+                    enum:
+                      - Addon
+                      - Cluster
+                      - ClusterBackup
+                      - Project
+                      - None
+                    type: string
+                  type: array
                 etcdBackupRestore:
                   description: |-
                     EtcdBackupRestore holds the configuration of the automatic etcd backup restores for the Seed;
