--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -219,6 +219,37 @@ spec:
                               Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
                               ignoring cluster-specific settings.
                             type: boolean
+                          enforceAuditWebhook:
+                            description: |-
+                              Optional: EnforceAuditWebhook allows admins control webhook backend for every cluster within the DC,
+                              ignoring cluster-specific settings.
+                            properties:
+                              auditWebhook:
+                                description: 'Optional: AuditWebhook contains reference to secret holding the audit webhook backend config'
+                                properties:
+                                  name:
+                                    description: name is unique within a namespace to reference a secret resource.
+                                    type: string
+                                  namespace:
+                                    description: namespace defines the space within which the secret name must be unique.
+                                    type: string
+                                type: object
+                                x-kubernetes-map-type: atomic
+                              auditWebhookInitialBackoff:
+                                default: 10s
+                                type: string
+                              enabled:
+                                description: Enabled will enable or disable audit webhook backend.
+                                type: boolean
+                              policyPreset:
+                                description: 'Optional: PolicyPreset can be set to utilize a pre-defined set of audit policy rules.'
+                                enum:
+                                  - ""
+                                  - metadata
+                                  - recommended
+                                  - minimal
+                                type: string
+                            type: object
                           enforcePodSecurityPolicy:
                             description: |-
                               Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
